--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <header>
                     <div class="overlay">
                         <div class="inner">
-                            <h2 class="title">Embrace the Beauty of Nature</h2>
+                            <h2 class="title">Embrace the <span>Beauty</span> of Nature</h2>
                             <p>
                             Discover the wonders of nature, where every moment is a masterpiece of tranquility and harmony.
                             Immerse yourself in the serene landscapes and let the soothing embrace of the natural world captivate your soul.
